--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="calculate">Calculate</string>
     <string name="close">Close</string>
     <string name="monthly_repayment">Month repayment</string>
+    <string name="status">Status</string>
 </resources>
